--- a/app/src/main/res/layout/dialog_login_d.xml
+++ b/app/src/main/res/layout/dialog_login_d.xml
@@ -15,7 +15,7 @@
         android:layout_width="237dp"
         android:layout_height="43dp"
 
-
+        android:background="@null"
         android:layout_marginStart="20dp"
         android:layout_marginTop="68dp"
         android:hint="请输入用户名"
@@ -40,7 +40,7 @@
         android:id="@+id/editText3"
         android:layout_width="322dp"
         android:layout_height="42dp"
-
+        android:background="@null"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:hint="请输入密码"
