--- a/app/src/main/res/layout/dialog_login_z.xml
+++ b/app/src/main/res/layout/dialog_login_z.xml
@@ -7,6 +7,7 @@
     android:background="@drawable/login_z_background">
 
     <EditText
+        android:background="@null"
         android:id="@+id/editText2"
         android:layout_width="245dp"
         android:layout_height="45dp"
@@ -19,6 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
+        android:background="@null"
         android:id="@+id/editText4"
         android:layout_width="244dp"
         android:layout_height="45dp"
@@ -31,6 +33,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editText2" />
 
     <EditText
+        android:background="@null"
         android:id="@+id/editText5"
         android:layout_width="244dp"
         android:layout_height="45dp"
@@ -43,6 +46,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editText4" />
 
     <EditText
+        android:background="@null"
         android:id="@+id/editText6"
         android:layout_width="142dp"
         android:layout_height="45dp"
