--- a/app/src/main/res/layout/dialog_login_d.xml
+++ b/app/src/main/res/layout/dialog_login_d.xml
@@ -12,16 +12,18 @@
 
     <EditText
         android:id="@+id/editText"
-        android:layout_width="237dp"
-        android:layout_height="43dp"
+        android:layout_width="235dp"
+        android:layout_height="25dp"
 
-        android:background="@null"
+        android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="80dp"
+        android:background="@null"
         android:hint="请输入用户名"
         android:inputType="textPersonName"
         android:textColorLink="@android:color/background_light"
         android:textSize="17sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -38,13 +40,15 @@
 
     <EditText
         android:id="@+id/editText3"
-        android:layout_width="322dp"
-        android:layout_height="42dp"
+        android:layout_width="235dp"
+        android:layout_height="28dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
         android:background="@null"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
         android:hint="请输入密码"
         android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText" />
 
@@ -54,13 +58,13 @@
         android:layout_height="19dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="20dp"
+        android:onClick="login_Z"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.921"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView6"
-        app:srcCompat="@drawable/login_d_zhu"
-        android:onClick="login_Z"/>
+        app:srcCompat="@drawable/login_d_zhu" />
 </android.support.constraint.ConstraintLayout>
 
 
