--- a/app/src/main/res/layout/dialog_login_z.xml
+++ b/app/src/main/res/layout/dialog_login_z.xml
@@ -7,64 +7,72 @@
     android:background="@drawable/login_z_background">
 
     <EditText
-        android:background="@null"
         android:id="@+id/editText2"
-        android:layout_width="245dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="68dp"
+        android:layout_width="240dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="78dp"
+        android:background="@null"
         android:ems="10"
         android:hint="请输入用户名"
         android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:background="@null"
         android:id="@+id/editText4"
-        android:layout_width="244dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="2dp"
+        android:layout_width="240dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="17dp"
+        android:background="@null"
         android:ems="10"
         android:hint="请输入手机号"
         android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText2" />
 
     <EditText
-        android:background="@null"
         android:id="@+id/editText5"
-        android:layout_width="244dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="3dp"
+        android:layout_width="240dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="17dp"
+        android:background="@null"
         android:ems="10"
         android:hint="请输入密码"
         android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText4" />
 
     <EditText
-        android:background="@null"
         android:id="@+id/editText6"
         android:layout_width="142dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="3dp"
+        android:layout_height="27dp"
+        android:layout_marginEnd="13dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="20dp"
+        android:background="@null"
         android:ems="10"
         android:hint="请输入验证码"
         android:inputType="textPersonName"
+        app:layout_constraintEnd_toStartOf="@+id/imageView8"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText5" />
 
     <ImageView
         android:id="@+id/imageView8"
-        android:layout_width="276px"
+        android:layout_width="270px"
         android:layout_height="82px"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="13dp"
-        app:layout_constraintStart_toEndOf="@+id/editText6"
+        android:layout_marginEnd="19dp"
+        android:layout_marginTop="18dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText5"
         app:srcCompat="@drawable/login_z_y" />
 
@@ -72,8 +80,11 @@
         android:id="@+id/imageView9"
         android:layout_width="740px"
         android:layout_height="84px"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText6"
         app:srcCompat="@drawable/login_z_z" />
